<resources>
    <string name="app_name">TrafficProblems</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">profile</string>
    <string name="profile_name">Name: </string>
    <string name="profile_last_name">Last name: </string>
    <string name="profile_phone_number">Phone number: </string>
    <string name="profile_email_address">Email address: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_password">Password: </string>
    <string name="profile_friends">Friends: </string>
    <string name="profile_posts">Posts: </string>
    <string name="profile_rank">Rank: </string>
    <string name="open_profile">Open profile: </string>
    <string name="title_activity_edit_profile">editProfile</string>
    <string name="title_activity_profile_menu">ProfileMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_maps">Traffic Problems</string>
    <string name="title_activity_nav_drawer_main">NavDrawerMain</string>
    <string name="title_activity_add_problem">AddProblemActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_administrators_list">AdministratorsList</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="title_activity_problems_list">ProblemsList</string>
    <string name="title_for_problem_lists">Problem</string>
    <string name="title_activity_view_problem">ViewProblemActivity</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a Device to connect to:</string>
    <string name="none_found">No devices found</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>
