<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditProfile"
    tools:showIn="@layout/activity_edit_profile">

    <TextView
        android:id="@+id/last_name"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/profile_last_name"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toStartOf="@+id/editLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:text="Last name: " />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/profile_phone_number"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:text="Phone number: " />

    <TextView
        android:id="@+id/email"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_email"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        tools:text="Email: " />

    <TextView
        android:id="@+id/password"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_password"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toStartOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        tools:text="Password: " />

    <TextView
        android:id="@+id/name"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/profile_name"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#fff"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/editPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="text"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="Last name"
        android:inputType="text"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/last_name"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/editLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="Email"
        android:textSize="22dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLastName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/save" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>